fix(deploy): include CDS model files and sqlite runtime in CF artifact

--- a/mta.yaml
+++ b/mta.yaml
@@ -9,7 +9,7 @@ modules:
     path: gen/srv
     build-parameters:
       builder: npm-ci
-      ignore: ["default-env.json", ".cdsrc.json", ".mta.yaml", "srv", "db", "test", "tests", "coverage"]
+      ignore: ["default-env.json", ".cdsrc.json", ".mta.yaml", "test", "tests", "coverage"]
     provides:
       - name: btp-cap-rag-admin-hub-api
         properties:
