--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "description": "CAP backend proxy for SAP AI Core RAG services – admin and chat capabilities.",
   "dependencies": {
+    "@cap-js/sqlite": "^2",
     "@sap-cloud-sdk/connectivity": "^4.4.0",
     "@sap-cloud-sdk/http-client": "^4.4.0",
     "@sap/cds": "^9",
     "express": "^4"
   },
   "devDependencies": {
-    "@cap-js/sqlite": "^2",
     "@sap/cds-dk": "^9",
     "rimraf": "^5.0.5"
   },
@@ -23,7 +23,10 @@
   },
   "cds": {
     "requires": {
-      "auth": "dummy"
+      "auth": "dummy",
+      "db": {
+        "kind": "sqlite"
+      }
     }
   },
   "private": true
